# kdb

./: .arcconfig  .gitignore  .kde-ci.yml  AUTHORS  CHANGELOG  CMakeLists.txt  COPYING.LIB  KDb.pc.cmake  Mainpage.dox  README  README-PACKAGERS.md  README.PACKAGERS  README.md  TODO  kdb.pc.cmake  metainfo.yaml  predicate.pc.cmake
autotests/: CMakeLists.txt  ConnectionOptionsTest.cpp  ConnectionOptionsTest.h  ConnectionTest.cpp  ConnectionTest.h  DateTimeTest.cpp  DateTimeTest.h  DriverTest.cpp  DriverTest.h  ExpressionsTest.cpp  ExpressionsTest.h  KDbTest.cpp  KDbTest.h  KDbTestUtils.cpp  KDbTestUtils.h  MissingTableTest.cpp  OrderByColumnTest.cpp  OrderByColumnTest.h  QuerySchemaTest.cpp  QuerySchemaTest.h  TestConnection.cpp
autotests/data/: missingTableTest.kexi
autotests/headers/: CMakeLists.txt  HeadersTest.cpp  HeadersTestInclude.cmake  KDb.h_HeaderTest.cpp  KDbAdmin.h_HeaderTest.cpp  KDbAdmin_HeaderTest.cpp  KDbAlter.h_HeaderTest.cpp  KDbAlterHeaderTest.cpp  KDbConnection.h_HeaderTest.cpp  KDbConnectionData.h_HeaderTest.cpp  KDbConnectionData_HeaderTest.cpp  KDbConnectionHeaderTest.cpp  KDbCursor.h_HeaderTest.cpp  KDbCursorHeaderTest.cpp  KDbDriver.h_HeaderTest.cpp  KDbDriverHeaderTest.cpp  KDbDriverManager.h_HeaderTest.cpp  KDbDriverManager_HeaderTest.cpp  KDbDriverMetaData.h_HeaderTest.cpp  KDbDriverMetaDataHeaderTest.cpp  KDbError.h_HeaderTest.cpp  KDbError_HeaderTest.cpp  KDbEscapedString.h_HeaderTest.cpp  KDbEscapedString_HeaderTest.cpp  KDbExpression.h_HeaderTest.cpp  KDbExpressionData.h_HeaderTest.cpp  KDbExpressionData_HeaderTest.cpp  KDbExpressionHeaderTest.cpp  KDbField.h_HeaderTest.cpp  KDbFieldHeaderTest.cpp  KDbFieldList.h_HeaderTest.cpp  KDbFieldListHeaderTest.cpp  KDbFieldValidator.h_HeaderTest.cpp  KDbFieldValidatorHeaderTest.cpp  KDbGlobal.h_HeaderTest.cpp  KDbGlobal_HeaderTest.cpp  KDbHeaderTest.cpp  KDbIdentifierValidator.h_HeaderTest.cpp  KDbIdentifierValidator_HeaderTest.cpp  KDbIndexSchema.h_HeaderTest.cpp  (+60 more)
autotests/parser/: CMakeLists.txt  SqlParserTest.cpp  SqlParserTest.h
autotests/parser/data/: sqlParserTest.kexi  statements.txt
autotests/tools/: CMakeLists.txt  IdentifierTest.cpp  IdentifierTest.h  StaticSetOfStringsTest.cpp  StaticSetOfStringsTest.h  TestStaticSetOfStrings.cpp  UtilsTest.cpp
examples/features/: CMakeLists.txt  README  cursors_test.h  dbcreation_test.h  main.cpp  mysqlcursor.cpp  parser_test.h  schema_test.h  tables_test.h  tableview_test.h
src/: Admin.cpp  Admin.h  Alter.cpp  Alter.h  CMakeLists.txt  Connection.cpp  Connection.h  ConnectionData.cpp  ConnectionData.h  ConnectionData.shared.h  Connection_p.h  Cursor.cpp  Cursor.h  Cursor_p.h  DbObjectNameValidator.cpp  DbProperties.cpp  DbProperties.h  Driver.cpp  Driver.h  DriverInfo.h  DriverManager.cpp  DriverManager.h  DriverManager_p.h  Driver_p.cpp  Driver_p.h  Error.h  EscapedString.cpp  EscapedString.h  Expression.cpp  Field.cpp  Field.h  FieldList.cpp  FieldList.h  Global.cpp  Global.h.cmake  IndexSchema.cpp  IndexSchema.h  KDb.cpp  KDb.h  KDbAdmin.cpp  (+128 more)
src/drivers/: .krazy  CMakeLists.txt
src/drivers/mysql/: CMakeLists.txt  Messages.sh  MysqlConnection.cpp  MysqlConnection.h  MysqlConnection_p.cpp  MysqlConnection_p.h  MysqlCursor.cpp  MysqlCursor.h  MysqlDriver.cpp  MysqlDriver.h  MysqlKeywords.cpp  MysqlPreparedStatement.cpp  MysqlPreparedStatement.h  kdb_mysqldriver.desktop  kdb_mysqldriver.json  mysql_debug.cpp  mysql_debug.h  predicate_mysql.desktop
src/drivers/odbc/: CMakeLists.txt  odbcconnection.cpp  odbcconnection.h  odbcdriver.cpp  odbcdriver.h  predicate_odbc.desktop
src/drivers/oracle/: CMakeLists.txt  oracleconnection.cpp  oracleconnection.h  oracleconnection_p.cpp  oracleconnection_p.h  oraclecursor.cpp  oraclecursor.h  oracledriver.cpp  oracledriver.h  predicate_oracle.desktop
src/drivers/postgresql/: CMakeLists.txt  Messages.sh  PostgresqlConnection.cpp  PostgresqlConnection.h  PostgresqlConnection_p.cpp  PostgresqlConnection_p.h  PostgresqlCursor.cpp  PostgresqlCursor.h  PostgresqlDriver.cpp  README  (+13 more)
src/expression/: BinaryExpression.cpp  ConstExpression.cpp  Expression.cpp  Expression.h  ExpressionData.h  Expression_p.h  FunctionExpression.cpp  KDbBinaryExpression.cpp  KDbConstExpression.cpp  KDbExpression.cpp  KDbExpression.h  KDbExpressionData.h  KDbFunctionExpression.cpp  KDbNArgExpression.cpp  KDbQueryParameterExpression.cpp  KDbUnaryExpression.cpp  KDbVariableExpression.cpp  NArgExpression.cpp  QueryParameterExpression.cpp  UnaryExpression.cpp  VariableExpression.cpp
src/interfaces/: KDbPreparedStatementInterface.h  PreparedStatementInterface.h
src/parser/: KDbParser.cpp  KDbParser.h  KDbParser_p.cpp  KDbParser_p.h  KDbSqlParser.y  KDbSqlScanner.l  KDbSqlTypes.h  Parser.cpp  Parser.h  Parser_p.cpp  Parser_p.h  SqlParser.cpp  SqlParser.h  SqlParser.y  SqlScanner.cpp  SqlScanner.l  SqlTypes.h  extract_tokens.sh  generate_parser_code.sh  tokens.cpp
src/predicate/: ConnectionData.h  Expression.cpp  Expression.h  Expression.shared.h  Global.h  Object.h  RowEditBuffer.cpp  RowEditBuffer.h  SchemaData.cpp  SchemaData.h
src/sql/: KDbSqlField.cpp  KDbSqlField.h  KDbSqlRecord.cpp  KDbSqlRecord.h  KDbSqlResult.cpp  KDbSqlResult.h  KDbSqlString.h
src/tools/: CMakeLists.txt  DbObjectNameValidator.cpp  DbObjectNameValidator.h  FieldValidator.cpp  FieldValidator.h  Identifier.cpp  Identifier.h  KDbFieldValidator.cpp  KDbFieldValidator.h  KDbIdentifierValidator.cpp  KDbIdentifierValidator.h  KDbJsonTrader_p.cpp  KDbJsonTrader_p.h  KDbLongLongValidator.cpp  KDbLongLongValidator.h  KDbObjectNameValidator.cpp  KDbObjectNameValidator.h  KDbSimpleCommandLineApp.cpp  KDbSimpleCommandLineApp.h  KDbTristate.h  KDbUtils.cpp  KDbUtils.h  KDbUtils_p.h  KDbValidator.cpp  KDbValidator.h  LongLongValidator.cpp  LongLongValidator.h  SharedPtr.h  SimpleCommandLineApp.cpp  SimpleCommandLineApp.h  Static.cpp  Static.h  Tristate.h  Utils.cpp  Utils.h  Validator.cpp  Validator.h
src/views/: KDbTableViewColumn.cpp  KDbTableViewColumn.h  KDbTableViewData.cpp  KDbTableViewData.h  TableViewColumn.cpp  TableViewColumn.h  TableViewData.cpp  TableViewData.h
(+444 files in other folders)
